syntax = "proto3";

option go_package = "./v1";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service Vault {
  rpc FindVault  (google.protobuf.Empty)       returns (VaultResponse) {}
  rpc FindAllVaults  (google.protobuf.Empty)       returns (AllVaultResponse) {}
  rpc CreateVault (VaultRequest)       returns (VaultResponse) {}
  rpc UpdateVault (VaultRequest)       returns (VaultResponse) {}
  rpc DeleteVault (google.protobuf.Empty)       returns (google.protobuf.Empty) {}
}

message VaultResponse {
  uint64 id = 1;
  uint64 user_id = 2;
  uint64 folder_id = 3;
  string username = 4;
  string name = 5;
  string password = 6;
  string url = 7;
  string notes = 8;
  bool favorite = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

message AllVaultResponse {
  repeated VaultResponse vault_response = 1;
}

message VaultRequest {
  string name = 1;
  uint64 folder_id = 2;
  string username = 3;
  string password = 4;
  string url = 5;
  string notes = 6;
  bool favorite = 7;
}

service Folder {
  rpc FindFolder  (google.protobuf.Empty)       returns (FolderResponse) {}
  rpc FindAllFolders  (google.protobuf.Empty)       returns (AllFolderResponse) {}
  rpc CreateFolder (FolderRequest)       returns (FolderResponse) {}
  rpc UpdateFolder (FolderRequest)       returns (FolderResponse) {}
  rpc DeleteFolder (google.protobuf.Empty)       returns (google.protobuf.Empty) {}
}

message FolderRequest {
  uint64 user_id = 1;
  string name = 2;
}

message FolderResponse {
 uint64 id = 1;
 uint64 user_id = 2;
 string name = 3;
 google.protobuf.Timestamp created_at = 4;
 google.protobuf.Timestamp updated_at = 5;
}

message AllFolderResponse {
  repeated FolderResponse folder_response = 1;
}

